load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")

package(default_visibility = [
    "//apps:__subpackages__",
    "//packages:__subpackages__",
])

npm_link_all_packages(name = "node_modules")

npm_package(
    name = "tailwind-variants",
    srcs = [
        "package.json",
        "transformer.d.ts",
        "transformer.js",
        ":node_modules/tailwind-merge",
        ":node_modules/tailwindcss",
        "dist"
    ],
    # This is a perf improvement; the default will be flipped to False in rules_js 2.0
    include_runfiles = False,
    visibility = ["//visibility:public"],
)